deployments/drone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone
  name: drone
  namespace: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
      - image: drone/drone
        imagePullPolicy: Always
        name: drone
        ports:
          - containerPort: 443
