deployments/drone/runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone-runner
  name: drone-runner
  namespace: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-runner
  template:
    metadata:
      labels:
        app: drone-runner
    spec:
      serviceAccountName: drone-runner
      containers:
      - image: drone/drone-runner-kube
        imagePullPolicy: Always
        name: drone-runner
        ports:
          - containerPort: 3000
