deployments/drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-service
  namespace: drone
spec:
  type: ClusterIP
  selector:
    app: drone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
